# ac-pro-engineer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README.txt  build.rs  build_release.bat  config.json  deploy.py  deploy_full.py  server.py  version.json
core/: Cargo.toml
core/src/: ac_structs.rs  analyzer.rs  config.rs  content_manager.rs  discord.rs  engineer.rs  lib.rs  memory.rs  process.rs  records.rs  session_info.rs  setup_manager.rs  updater.rs
github_export/: bmw_m3_gt2.json  bmw_z4_gt3.json  ferrari_458_gt2.json  lotus_exos_125_s1.json  manifest.json  mclaren_mp412c_gt3.json  mercedes_sls_gt3.json  p4-5_2011.json
server_setups/AFN PRO/bmw_m3_gt2/imola/: Imola.ini
server_setups/AFN PRO/bmw_m3_gt2/ks_nurburgring/: Nurburgring.ini
server_setups/AFN PRO/bmw_m3_gt2/monza/: Monza.ini
server_setups/AFN PRO/bmw_m3_gt2/mugello/: Mugello.ini
server_setups/AFN PRO/bmw_m3_gt2/silverstone/: Silverstone.ini
server_setups/AFN PRO/bmw_z4_gt3/imola/: Imola.ini
server_setups/AFN PRO/bmw_z4_gt3/ks_brands_hatch/: Brands Hatch.ini
server_setups/AFN PRO/bmw_z4_gt3/ks_nurburgring/: Nurburgring.ini
server_setups/AFN PRO/bmw_z4_gt3/ks_zandvoort/: Zandvoort.ini
server_setups/AFN PRO/bmw_z4_gt3/monza/: Monza.ini
server_setups/AFN PRO/bmw_z4_gt3/mugello/: Mugello.ini
server_setups/AFN PRO/bmw_z4_gt3/silverstone/: Silverstone.ini
server_setups/AFN PRO/bmw_z4_gt3/spa/: Spa.ini
server_setups/AFN PRO/ferrari_458_gt2/imola/: Imola.ini
server_setups/AFN PRO/ferrari_458_gt2/ks_barcelona/: Barcelona-Catalunya.ini
server_setups/AFN PRO/ferrari_458_gt2/ks_brands_hatch/: Brands Hatch.ini
server_setups/AFN PRO/ferrari_458_gt2/ks_nurburgring/: Nurburgring.ini
server_setups/AFN PRO/ferrari_458_gt2/ks_zandvoort/: Zandvoort.ini
server_setups/AFN PRO/ferrari_458_gt2/monza/: Monza.ini
server_setups/AFN PRO/ferrari_458_gt2/mugello/: Mugello.ini
server_setups/AFN PRO/ferrari_458_gt2/silverstone/: Silverstone.ini
server_setups/AFN PRO/ferrari_458_gt2/spa/: Spa.ini
server_setups/AFN PRO/lotus_exos_125_s1/monza/: Monza.ini  WR-1.24.887.ini
server_setups/AFN PRO/mclaren_mp412c_gt3/imola/: Imola.ini
server_setups/AFN PRO/mclaren_mp412c_gt3/ks_nurburgring/: Nurburgring.ini
server_setups/AFN PRO/mclaren_mp412c_gt3/monza/: Monza.ini
server_setups/AFN PRO/mclaren_mp412c_gt3/mugello/: Mugello.ini
server_setups/AFN PRO/mclaren_mp412c_gt3/spa/: Spa.ini
server_setups/AFN PRO/mercedes_sls_gt3/imola/: Imola.ini
server_setups/AFN PRO/mercedes_sls_gt3/ks_nurburgring/: Nurburgring.ini
server_setups/AFN PRO/mercedes_sls_gt3/monza/: Monza.ini
server_setups/AFN PRO/mercedes_sls_gt3/mugello/: Mugello.ini
server_setups/AFN PRO/mercedes_sls_gt3/silverstone/: Silverstone.ini
server_setups/AFN PRO/mercedes_sls_gt3/spa/: Spa.ini
server_setups/AFN PRO/p4-5_2011/spa/: Spa.ini
shm-bridge/: Cargo.toml  README.md
shm-bridge/src/: file_mapping.rs  main.rs
src/: ac_structs.rs  analyzer.rs  config.rs  content_manager.rs  discord.rs  engineer.rs  main.rs  memory.rs  process.rs  records.rs  session_info.rs  setup_manager.rs  ui.rs  updater.rs
src/ui/: launcher.rs  localization.rs  mod.rs  overlay.rs  widgets.rs
src/ui/tabs/: analysis.rs  dashboard.rs  engineer.rs  ffb.rs  guide.rs  mod.rs  settings.rs  setup.rs  strategy.rs  telemetry.rs
src/ui/tabs/analysis/: dynamics.rs  engine.rs  graphs.rs  mod.rs  overview.rs  traction.rs
tests_suite/: Cargo.toml
tests_suite/src/: core_tests.rs  lib.rs  linux_tests.rs  tui_tests.rs
tui/: Cargo.toml
tui/src/: main.rs
tui/src/platform/: linux.rs
tui/src/ui/: file_menu.rs  help_overlay.rs  launcher.rs  localization.rs  mod.rs  overlay.rs  widgets.rs
tui/src/ui/tabs/: dashboard.rs  engineer.rs  ffb.rs  settings.rs  setup.rs  strategy.rs  telemetry.rs
tui/src/ui/tabs/analysis/: dynamics.rs  engine.rs  graphs.rs  mod.rs  overview.rs  traction.rs
