[workspace]
members = ["core", "tui"]

[workspace.package]
version = "0.1.9"
edition = "2021"
authors = ["Rgosh"]

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }
unsafe_code = "allow"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"
nonstandard-style = "warn"
keyword-idents = "warn"
future-incompatible = "warn"
deprecated-safe = "warn"
let-underscore = "warn"
unknown-or-malformed-diagnostic-attributes = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "deny"
