[workspace]
resolver = "2"
members = ["core", "tui"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Rgosh"]

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.29.0"
directories-next = "2.0"
discord-rich-presence = "0.2"
memmap2 = "0.9.10"
ratatui = "0.26"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.11"
rust-ini = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
windows = "0.52"
walkdir = "2.4"

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }
unsafe_code = "allow"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"
nonstandard-style = "warn"
keyword-idents = "warn"
future-incompatible = "warn"
deprecated-safe = "warn"
let-underscore = "warn"
unknown-or-malformed-diagnostic-attributes = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "deny"
