[package]
name = "ac_core"
description = "Core telemetry and setup logic for AC Pro Engineer"
version = "0.2.2"
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
zerocopy = { workspace = true, features = ["derive"] }
directories-next = { workspace = true }
walkdir = { workspace = true }
rust-ini = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
discord-rich-presence = { workspace = true }
tracing = { workspace = true }
memmap2 = { workspace = true }

[target.'cfg(target_os="windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
] }
