[package]
name = "ac_tui"
description = "Professional telemetry TUI for Assetto Corsa"

version.workspace = true
edition.workspace = true
authors.workspace = true


[lints]
workspace = true

[dependencies]

ac_core = { path = "../core" }


crossterm = "0.27"
ratatui = "0.26"
open = "5.0"


anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }

serde_json = "1.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }


tracing = { version = "0.1", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-error = "0.2.1"


[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"
