[package]
name = "ac_tui"
description = "Professional telemetry TUI for Assetto Corsa"

version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
ac_core = { path = "../core" }
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
ratatui = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true, features = [
    "max_level_trace",
    "release_max_level_info",
] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "ac_pro_engineer"
path = "src/main.rs"

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"
